Fixing cutoff logos in logo carousel per issue #10, adjusting the styling for small-screen

--- a/assets/scss/components/_carousels.scss
+++ b/assets/scss/components/_carousels.scss
@@ -53,7 +53,6 @@
 
   .flickity-slider {
     display: flex;
-    align-items: center;
   }
 
   .flickity-page-dots {
@@ -65,18 +64,29 @@
   }
 
   a {
-    display: block;
+    width: 100%;
+    text-align: center;
   }
 
   img {
-    width: auto;
     max-width: 180px;
-    vertical-align: top;
   }
 
   @include media-md {
     padding: $padding-lg 0;
     margin: 0 0 $padding-md;
+
+    .flickity-slider {
+      display: flex;
+    }
+
+    a {
+      width: auto;
+      display: flex;
+      min-height: 40px;
+      flex-direction: column;
+      justify-content: center;
+    }
 
     .flickity-page-dots {
       top: auto;
